syntax = "proto3";
package cdm;
option java_package = "com.kitware.physiology.cdm";

enum eHeartRhythm
{
  NormalSinus = 0;
  Asystole    = 1;
}
