syntax = "proto3";
package pulse.engine.bind;
option java_package = "com.kitware.pulse.engine.bind";
option csharp_namespace = "pulse.engine.bind";
option optimize_for = SPEED;

import "pulse/cdm/bind/Enums.proto";
import "pulse/cdm/bind/Events.proto";
import "pulse/cdm/bind/Patient.proto";
import "pulse/cdm/bind/Properties.proto";
import "pulse/cdm/bind/Engine.proto";
import "pulse/cdm/bind/Substance.proto";
import "pulse/cdm/bind/Compartment.proto";
import "pulse/cdm/bind/Circuit.proto";
import "pulse/engine/bind/Enums.proto";
import "pulse/engine/bind/Configuration.proto";
import "pulse/engine/bind/Physiology.proto";
import "pulse/engine/bind/Environment.proto";
import "pulse/engine/bind/Equipment.proto";

message StateData
{
  eAirwayMode                                   AirwayMode           = 1;
  pulse.cdm.bind.eSwitch                        Intubation           = 2;
  pulse.cdm.bind.ScalarTimeData                 SimulationTime       = 3;
  pulse.cdm.bind.PatientData                    CurrentPatient       = 4;
  pulse.cdm.bind.PatientData                    InitialPatient       = 5;
  pulse.cdm.bind.ConditionListData              Conditions           = 6;
  pulse.cdm.bind.ActionListData                 ActiveActions        = 7;
  pulse.cdm.bind.ActiveEventListData            ActiveEvents         = 8;
  BloodChemistryData                            BloodChemistry       = 9;
  CardiovascularData                            Cardiovascular       = 10;
  DrugData                                      Drug                 = 11;
  EndocrineData                                 Endocrine            = 12;
  EnergyData                                    Energy               = 13;
  GastrointestinalData                          Gastrointestinal     = 14;
  HepaticData                                   Hepatic              = 15;
  NervousData                                   Nervous              = 16;
  RenalData                                     Renal                = 17;
  RespiratoryData                               Respiratory          = 18;
  TissueData                                    Tissue               = 19;
  EnvironmentData                               Environment          = 20;
  AnesthesiaMachineData                         AnesthesiaMachine    = 21;
  BagValveMaskData                              BagValveMask         = 22;
  ElectroCardioGramData                         ElectroCardioGram    = 23;
  InhalerData                                   Inhaler              = 24;
  MechanicalVentilatorData                      MechanicalVentilator = 25;
  pulse.cdm.bind.CompartmentManagerData         CompartmentManager   = 26;
  pulse.cdm.bind.CircuitManagerData             CircuitManager       = 27;
  repeated string                               ActiveSubstance      = 28;
  repeated string                               ActiveCompound       = 29;
  repeated pulse.cdm.bind.SubstanceData         Substance            = 30;
  repeated pulse.cdm.bind.SubstanceCompoundData Compound             = 31;
  ConfigurationData                             Configuration        = 32;
  pulse.cdm.bind.DataRequestManagerData         DataRequestManager   = 33;
}
